// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Biome WebAssembly lintContent > fixFileMode is SafeAndUnsafeFixes > should fix the code 1`] = `
"
	const b = / {3}/;
	"
`;

exports[`Biome WebAssembly lintContent > fixFileMode is SafeFixes > should fix the SafeFixes only 1`] = `
"
	debugger;
	const b = / {3}/;
	"
`;

exports[`Biome WebAssembly lintContent > fixFileMode is undefined/omitted > should not fix the code 1`] = `
"
	debugger;
	const b = /   /;
	"
`;
